--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.8.0",
     "@reduxjs/toolkit": "^1.9.0",
     "firebase": "^9.14.0",
+    "framer-motion": "^7.6.12",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.5",
